syntax = "proto3";

package com.github.nlepage.codyglot.service;
option go_package = "service";

import "google/api/annotations.proto";

service Codyglot {
  rpc execute(ExecuteRequest) returns (ExecuteResponse) {
    option (google.api.http) = {
      post: "/execute"
      body: "*"
    };
  }

  rpc languages(LanguagesRequest) returns (LanguagesResponse) {
    option (google.api.http) = {
      get: "/languages"
    };
  }

  rpc ping(Ping) returns (Pong) {}
}

message SourceFile {
  string path = 1;
  string content = 2;
}

message Execution {
  string stdin = 1; // Content sent on the standard input
}

message ExecuteRequest {
  string language = 1; // Language of the source code to execute
  repeated SourceFile sources = 2; // Source code to execute
  repeated Execution executions = 3; // Executions
}

message CommandResult {
  uint32 status = 1; // Exit status
  string stdout = 2; // Standard output
  string stderr = 3; // Standard error output
  int64 duration = 4; // Running duration
}

message ExecuteResponse {
  CommandResult compilation = 1; // Compilation result
  repeated CommandResult executions = 2; // Executions results
}

message LanguagesRequest {}

message LanguagesResponse {
  repeated string languages = 1; // Available languages
}

message Ping {}
message Pong {}
